# hallomai

./: .gitignore  Cargo.toml  JN.usx  LICENSE  README.md  TIT.usfm  binding.gyp  index.html  milestone_attributes.json  model_small.json  output_usfm_to_usj.json  output_usj.json  output_usj_to_usfm.usfm  output_usj_to_usx.usx  output_usx_to_usj.json  package.json  parser.exp  parser.lib  psa150.json  pyproject.toml  setup.py  usfm_test.json
assets/: TIT.usx  milestone_attributes.usx  minimal.json  small.json  usj_schema.json  web_psa.usx  web_psa150.usx
assets/data/bad/: bad_json.json  (+1 more)
assets/usfm/: 22-SNG.usfm  41-MAT.usfm  55-1TI.usfm  58-PHM.usfm  64-2JN.usfm  65-3JN.usfm  cl.usfm  psa_rsb.usfm
assets/usj/: very_small.json
assets/usx/: MAT.usx  TIT.usx
bindings/c/: tree-sitter-usfm3.h  tree-sitter-usfm3.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/rust/: build.rs  lib.rs
output/: JN.json  TIT.json  very_small.usfm  very_small.usx
src/: aosj_enum_model.rs  const_usfm.rs  deserialize_e_bible.rs  deserialize_usfm.rs  deserialize_usj.rs  deserialize_usx.rs  grammar.json  lib.rs  main.rs  model.rs  model_traits.rs  node-types.json  parser.rs  reg_ex_tests.rs  serialize_to_e_bible.rs  serialize_to_usfm.rs  serialize_to_usj.rs  serialize_to_usx.rs  utils_usfm.rs
src/aosj_string/: Element.rs  aosj_string_model.rs  element.rs  mod.rs
src/structs_model/: book_object.rs  cell_object.rs  chapter_object.rs  char_marker_object.rs  figure_object.rs  milestone_object.rs  mod.rs  model.rs  note_object.rs  para_marker_object.rs  root.rs  row_object.rs  sidebar_object.rs  table_object.rs  verse_object.rs
tests/code/: test_deserialize_usfm.rs  test_deserialize_usj.rs  test_deserialize_usx.rs
(+11 files in other folders)
