[package]
name = "proskomma_2"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_with = "3.8.1"
serde-xml-rs = "0.6.0"
xml_oxide = "0.3.0"
quick-xml = "0.36.0"
tree-sitter = "0.22.6"
tree_sitter_usfm_test = { version = "0.1.0", path = "../tree-sitter-usfm-test" }
#tree-sitter-usfm-test = { version = "0.1.0", path = "../tree-sitter-usfm-test" }

[dev-dependencies]
tempfile = "3.2"
