[package]
name = "hallomai"
version = "0.1.3"
edition = "2021"
description = "A rust converter USFM<->USJ<->USX"
license = "MIT"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_with = "3.8.1"
serde-xml-rs = "0.6.0"
xml_oxide = "0.3.0"
quick-xml = "0.36.0"
#tree-sitter = "0.22.6"
#tree-sitter-rust = "0.21.2"
#rust-usfm-parser = { git = "https://github.com/Proskomma/rust-usfm-parser", version = "0.1.0" }
regex = "1"
tempfile = "3.10.1"
structopt = "0.3.26"

[profile.dev]
debug = 0

[package.metadata.includedir]
path = "tests"